sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not enough arguments for method echange: (x$1: Int, x$2: Int)Unit.
Unspecified value parameters x$1, x$2.
while (echange()==true) {
              ^